# tree-sitter-metal

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-metal.pc.in
bindings/c/tree_sitter/: tree-sitter-metal.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_metal/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMetalTests/: TreeSitterMetalTests.swift
src/: grammar.json  node-types.json  scanner.c
test/: test.metal
